# DatabasePracticeAssignment

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  auth.py  db.py  main.py  pyproject.toml  schemas.py
backend/routers/: auth.py  books.py  circulation.py  readers.py  stats.py
docs/: 1系统需求分析.md  2概念和逻辑结构设计及1的补充.md  3物理结构设计和系统实现.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: api.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/store/: auth.ts
frontend/src/views/: Books.vue  Circulation.vue  Login.vue  Readers.vue  Stats.vue
sql/: init.sql  seed.sql
